# telegram-android-cats-bot

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/telegram_android_cats_bot/: __main__.py  config.py
src/telegram_android_cats_bot/app/: setups.py
